--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Open Sans";
   background-color: #f5f5f5;
@@ -13,8 +17,8 @@ body {
 
 .header {
   display: flex;
-  justify-content: center;
   height: 8vh;
+  min-height: 40px;
   width: 100%;
   background-color: #000;
 }
@@ -23,7 +27,7 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 1400px;
+  width: 100%;
   flex-wrap: wrap;
   /* border: 1px solid darkred; */
 }
@@ -52,4 +56,277 @@ body {
 .menu__list > li > a {
   text-decoration: none;
   color: #ffffff;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.section-one {
+  background-color: #9a9a9a;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.section-one__logo-text-button {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 110px 0 110px 0;
+  width: 510px;
+  height: 392px;
+}
+
+.section-one__title {
+  display: flex;
+  font-family: "Raleway", sans-serif;
+  font-size: 36px;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
+  margin: 0;
+}
+
+.section-one__line {
+  display: flex;
+  margin: 0;
+  width: 67px;
+  height: 2px;
+  border: none;
+  background-color: #fff;
+}
+
+.section-one__text {
+  display: flex;
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  color: #fff;
+  margin: 0;
+}
+
+.section-one__button > a {
+  display: flex;
+  border: 2px solid #fff;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 9px 29.5px;
+}
+
+.section-one__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 360px;
+  height: 362px;
+  background-color: #fff;
+  border-radius: 5px 5px 5px 5px;
+  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+.section-one__form > p {
+  margin: 0;
+  background-color: #f5f5f5;
+  font-size: 20px;
+  font-weight: 700;
+  width: 100%;
+  padding: 13.5px 0 13.5px 0;
+  text-align: center;
+  border-radius: 4px 4px 0 0;
+}
+
+.section-one__form > p > span {
+  text-transform: uppercase;
+  color: #ff8b38;
+}
+
+.section-one__form-name {
+  display: flex;
+  height: 30px;
+  width: 285px;
+  border: none;
+  border-bottom: 1px solid #bdbdbd;
+}
+
+.section-one__form-email {
+  display: flex;
+  height: 30px;
+  width: 285px;
+
+  border: none;
+  border-bottom: 1px solid #bdbdbd;
+}
+
+.section-one__form-password {
+  display: flex;
+  height: 30px;
+  width: 285px;
+
+  border: none;
+  border-bottom: 1px solid #bdbdbd;
+}
+
+input[type="text"]::-webkit-input-placeholder {
+  color: #bdbdbd;
+}
+
+input[type="text"]::-moz-placeholder {
+  color: #bdbdbd;
+}
+
+input[type="password"]::-webkit-input-placeholder {
+  color: #bdbdbd;
+}
+
+input[type="password"]::-moz-placeholder {
+  color: #bdbdbd;
+}
+
+.section-one__form-button {
+  display: flex;
+  font-size: 15px;
+  font-weight: 600;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  padding: 17px 134px;
+  background-color: #ff8b38;
+  width: 100%;
+  cursor: pointer;
+  border: none;
+  margin: 0;
+  border-radius: 0 0 5px 5px;
+}
+
+.section-two {
+  display: flex;
+  height: 105px;
+  background-color: #fff;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.38);
+}
+
+.section-two__text {
+  display: flex;
+  flex-direction: column;
+  width: 362px;
+}
+
+.section-two__title {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.section-two__paragraph {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  color: #86878b;
+}
+
+.section-two__links {
+  display: flex;
+  justify-content: space-between;
+  font-size: 48px;
+  width: 655px;
+}
+
+.section-two__links > a {
+  color: #cccccc;
+}
+
+.section-three {
+  display: flex;
+  flex-direction: row;
+  height: 595px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.section-three__tabs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.section-three__tab-one > a,
+.section-three__tab-two > a,
+.section-three__tab-three > a {
+  display: flex;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 700;
+  font-size: 15px;
+  background-color: #333333;
+  padding: 45px 34.219px;
+  box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.section-three__tab-one > a {
+  margin-bottom: 2px;
+  border-radius: 3% 3% 0 0;
+}
+.section-three__tab-three > a {
+  margin-top: 2px;
+  border-radius: 0 0 3% 3%;
+}
+
+.section-three__text-and-button {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 478px;
+  height: 301px;
+}
+
+.section-three__title {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.section-three__text-one {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  color: #86878b;
+}
+
+.section-three__text-two {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0;
+  color: #86878b;
+}
+
+.section-three__button > a {
+  display: flex;
+  background-color: #ff8b38;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 12.51px 23.34px;
+  border-radius: 4px;
+}
+
+.section-three__image {
+  display: flex;
+}
+
+.section-four {
+  display: none;
 }
